tangle/src/js/generated/TangleParser.js
// Generated from src/g4/TangleParser.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import TangleParserListener from './TangleParserListener.js';
import TangleParserVisitor from './TangleParserVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class TangleParser extends antlr4.Parser {

    static grammarFileName = "TangleParser.g4";
    static literalNames = [ null, null, "'='", null, "'<import>'", "'<props>'", 
                            "'<code>'", "'function '", "'if'", "'else if'", 
                            "'else'", "'('", null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, "'<'", null, "'from'", null, null, 
                            null, null, "'</import>'", null, "'</props>'", 
                            null, null, null, "'</code>'", null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            "'>'", null, null, null, null, "'\\n'" ];
    static symbolicNames = [ null, "WS", "ASSIGN", "ASSIGN_OPERATOR", "IMPORT_OPEN", 
                             "PROPS_OPEN", "CODE_OPEN", "FUNCTION", "IF", 
                             "ELSE_IF", "ELSE", "LPAREN", "EMBEDDED_OPEN", 
                             "EMBEDDED_CLOSE", "EMBEDDED_CONTENT_CLOSE", 
                             "INT", "BOOL", "STRING_OPEN", "CODE_BLOCK_OPEN", 
                             "CODE_BLOCK_CLOSE", "FUNC_START", "ARGS_OPEN", 
                             "ARGS_CLOSE", "ARGS_SEPARATOR", "VAR_DEF", 
                             "STATEMENT_END", "TAG_SLASH", "TAG_OPEN", "NAME", 
                             "FROM", "IMPORT_ID", "IMPORT_PATH_OPEN", "IMPORT_STATEMENT_END", 
                             "IMPORT_WS", "IMPORT_CLOSE", "PROPS_WS", "PROPS_CLOSE", 
                             "COMMENT_START", "METHOD_CALL", "CODE_WS", 
                             "CODE_CLOSE", "EXPRESSION_OPEN", "IF_WS", "ELSE_WS", 
                             "FUNCTION_ARGS_WS", "ARITHMETIC_OPERATOR", 
                             "LOGICAL_OPERATOR", "COMPARISON_OPERATOR", 
                             "CREMENT_OPERATOR", "STATEMENT_WS", "EXPRESSION_CLOSE", 
                             "TAG_WS", "TAG_CLOSE", "ATTRIBUTE_WS", "EMBEDDED_END_IF", 
                             "EMBEDDED_WS", "COMMENT_CONTENT", "COMMENT_CLOSE", 
                             "STRING_CONTENT", "STRING_CLOSE", "TEXT" ];
    static ruleNames = [ "document", "importDeclaration", "importStatement", 
                         "componentImport", "styleImport", "propsDeclaration", 
                         "propsContent", "codeDeclaration", "codeContent", 
                         "functionDeclaration", "functionArgs", "comment", 
                         "variableDeclaration", "variableModification", 
                         "ifStatement", "embeddedIfStatement", "booleanExpression", 
                         "statement", "checkStatement", "elementsDeclaration", 
                         "content", "elementAttribute", "embeddedStatement", 
                         "expression", "embeddedIf", "embeddedElseIf", "embeddedElse", 
                         "functionCall", "functionCallArgs", "variableTypes", 
                         "stringType", "textContent", "operator" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = TangleParser.ruleNames;
        this.literalNames = TangleParser.literalNames;
        this.symbolicNames = TangleParser.symbolicNames;
    }



	document() {
	    let localctx = new DocumentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, TangleParser.RULE_document);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===4) {
	            this.state = 66;
	            this.importDeclaration();
	        }

	        this.state = 70;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===5) {
	            this.state = 69;
	            this.propsDeclaration();
	        }

	        this.state = 73;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===6) {
	            this.state = 72;
	            this.codeDeclaration();
	        }

	        this.state = 75;
	        this.elementsDeclaration();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	importDeclaration() {
	    let localctx = new ImportDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, TangleParser.RULE_importDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77;
	        this.match(TangleParser.IMPORT_OPEN);
	        this.state = 81;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===30 || _la===31) {
	            this.state = 78;
	            this.importStatement();
	            this.state = 83;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 84;
	        this.match(TangleParser.IMPORT_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	importStatement() {
	    let localctx = new ImportStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, TangleParser.RULE_importStatement);
	    try {
	        this.state = 88;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 30:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 86;
	            this.componentImport();
	            break;
	        case 31:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 87;
	            this.styleImport();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	componentImport() {
	    let localctx = new ComponentImportContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, TangleParser.RULE_componentImport);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 90;
	        this.match(TangleParser.IMPORT_ID);
	        this.state = 91;
	        this.match(TangleParser.FROM);
	        this.state = 92;
	        this.match(TangleParser.IMPORT_PATH_OPEN);
	        this.state = 93;
	        this.match(TangleParser.STRING_CONTENT);
	        this.state = 94;
	        this.match(TangleParser.STRING_CLOSE);
	        this.state = 95;
	        this.match(TangleParser.IMPORT_STATEMENT_END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	styleImport() {
	    let localctx = new StyleImportContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, TangleParser.RULE_styleImport);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 97;
	        this.match(TangleParser.IMPORT_PATH_OPEN);
	        this.state = 98;
	        this.match(TangleParser.STRING_CONTENT);
	        this.state = 99;
	        this.match(TangleParser.STRING_CLOSE);
	        this.state = 100;
	        this.match(TangleParser.IMPORT_STATEMENT_END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	propsDeclaration() {
	    let localctx = new PropsDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, TangleParser.RULE_propsDeclaration);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 102;
	        this.match(TangleParser.PROPS_OPEN);
	        this.state = 103;
	        this.propsContent();
	        this.state = 104;
	        this.match(TangleParser.PROPS_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	propsContent() {
	    let localctx = new PropsContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, TangleParser.RULE_propsContent);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 109;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===24) {
	            this.state = 106;
	            this.variableDeclaration();
	            this.state = 111;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	codeDeclaration() {
	    let localctx = new CodeDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, TangleParser.RULE_codeDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 112;
	        this.match(TangleParser.CODE_OPEN);
	        this.state = 119;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 7)) & ~0x1f) === 0 && ((1 << (_la - 7)) & 1075970051) !== 0)) {
	            this.state = 113;
	            this.codeContent();
	            this.state = 115;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	            if(la_===1) {
	                this.state = 114;
	                this.comment();

	            }
	            this.state = 121;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 122;
	        this.match(TangleParser.CODE_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	codeContent() {
	    let localctx = new CodeContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, TangleParser.RULE_codeContent);
	    try {
	        this.state = 132;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 124;
	            this.comment();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 125;
	            this.variableDeclaration();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 126;
	            this.ifStatement();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 127;
	            this.functionDeclaration();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 128;
	            this.functionCall();
	            this.state = 129;
	            this.match(TangleParser.STATEMENT_END);
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 131;
	            this.variableModification();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionDeclaration() {
	    let localctx = new FunctionDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, TangleParser.RULE_functionDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 134;
	        this.match(TangleParser.FUNCTION);
	        this.state = 135;
	        this.match(TangleParser.NAME);
	        this.state = 136;
	        this.match(TangleParser.LPAREN);
	        this.state = 138;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 15)) & ~0x1f) === 0 && ((1 << (_la - 15)) & 67117063) !== 0)) {
	            this.state = 137;
	            this.functionArgs();
	        }

	        this.state = 140;
	        this.match(TangleParser.ARGS_CLOSE);
	        this.state = 141;
	        this.match(TangleParser.CODE_BLOCK_OPEN);
	        this.state = 145;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 7)) & ~0x1f) === 0 && ((1 << (_la - 7)) & 1075970051) !== 0)) {
	            this.state = 142;
	            this.codeContent();
	            this.state = 147;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 148;
	        this.match(TangleParser.CODE_BLOCK_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionArgs() {
	    let localctx = new FunctionArgsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, TangleParser.RULE_functionArgs);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 150;
	        this.expression();
	        this.state = 155;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===23) {
	            this.state = 151;
	            this.match(TangleParser.ARGS_SEPARATOR);
	            this.state = 152;
	            this.expression();
	            this.state = 157;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comment() {
	    let localctx = new CommentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, TangleParser.RULE_comment);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 158;
	        this.match(TangleParser.COMMENT_START);
	        this.state = 159;
	        this.match(TangleParser.COMMENT_CONTENT);
	        this.state = 160;
	        this.match(TangleParser.COMMENT_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variableDeclaration() {
	    let localctx = new VariableDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, TangleParser.RULE_variableDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 162;
	        this.match(TangleParser.VAR_DEF);
	        this.state = 163;
	        this.match(TangleParser.NAME);
	        this.state = 166;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 164;
	            this.match(TangleParser.ASSIGN);
	            this.state = 165;
	            this.statement();
	        }

	        this.state = 168;
	        this.match(TangleParser.STATEMENT_END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variableModification() {
	    let localctx = new VariableModificationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, TangleParser.RULE_variableModification);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 170;
	        this.match(TangleParser.NAME);
	        this.state = 171;
	        _la = this._input.LA(1);
	        if(!(_la===2 || _la===3)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 172;
	        this.statement();
	        this.state = 173;
	        this.match(TangleParser.STATEMENT_END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifStatement() {
	    let localctx = new IfStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, TangleParser.RULE_ifStatement);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 175;
	        this.match(TangleParser.IF);
	        this.state = 176;
	        this.match(TangleParser.EXPRESSION_OPEN);
	        this.state = 177;
	        this.booleanExpression();
	        this.state = 178;
	        this.match(TangleParser.EXPRESSION_CLOSE);
	        this.state = 179;
	        this.match(TangleParser.CODE_BLOCK_OPEN);
	        this.state = 186;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 7)) & ~0x1f) === 0 && ((1 << (_la - 7)) & 1075970051) !== 0)) {
	            this.state = 180;
	            this.codeContent();
	            this.state = 182;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	            if(la_===1) {
	                this.state = 181;
	                this.comment();

	            }
	            this.state = 188;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 189;
	        this.match(TangleParser.CODE_BLOCK_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	embeddedIfStatement() {
	    let localctx = new EmbeddedIfStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, TangleParser.RULE_embeddedIfStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 191;
	        this.match(TangleParser.EXPRESSION_OPEN);
	        this.state = 192;
	        this.booleanExpression();
	        this.state = 193;
	        this.match(TangleParser.EXPRESSION_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	booleanExpression() {
	    let localctx = new BooleanExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, TangleParser.RULE_booleanExpression);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 195;
	        this.expression();
	        this.state = 196;
	        this.operator();
	        this.state = 197;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, TangleParser.RULE_statement);
	    try {
	        this.state = 209;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 201;
	            this._errHandler.sync(this);
	            switch (this._input.LA(1)) {
	            case 15:
	            case 16:
	            case 17:
	            	this.state = 199;
	            	this.variableTypes();
	            	break;
	            case 28:
	            	this.state = 200;
	            	this.match(TangleParser.NAME);
	            	break;
	            case 25:
	            	break;
	            default:
	            	break;
	            }
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 203;
	            this.checkStatement();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 204;
	            this.match(TangleParser.CREMENT_OPERATOR);
	            this.state = 205;
	            this.match(TangleParser.NAME);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 206;
	            this.match(TangleParser.NAME);
	            this.state = 207;
	            this.match(TangleParser.CREMENT_OPERATOR);
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 208;
	            this.functionCall();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	checkStatement() {
	    let localctx = new CheckStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, TangleParser.RULE_checkStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 213;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 15:
	        case 16:
	        case 17:
	            this.state = 211;
	            this.variableTypes();
	            break;
	        case 28:
	            this.state = 212;
	            this.match(TangleParser.NAME);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 215;
	        this.operator();
	        this.state = 218;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 15:
	        case 16:
	        case 17:
	            this.state = 216;
	            this.variableTypes();
	            break;
	        case 28:
	            this.state = 217;
	            this.match(TangleParser.NAME);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elementsDeclaration() {
	    let localctx = new ElementsDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, TangleParser.RULE_elementsDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 220;
	        this.match(TangleParser.TAG_OPEN);
	        this.state = 221;
	        this.match(TangleParser.NAME);
	        this.state = 225;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 222;
	            this.elementAttribute();
	            this.state = 227;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 237;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 52:
	            this.state = 228;
	            this.match(TangleParser.TAG_CLOSE);
	            this.state = 229;
	            this.content();
	            this.state = 230;
	            this.match(TangleParser.TAG_OPEN);
	            this.state = 231;
	            this.match(TangleParser.TAG_SLASH);
	            this.state = 232;
	            this.match(TangleParser.NAME);
	            this.state = 233;
	            this.match(TangleParser.TAG_CLOSE);
	            break;
	        case 26:
	            this.state = 235;
	            this.match(TangleParser.TAG_SLASH);
	            this.state = 236;
	            this.match(TangleParser.TAG_CLOSE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	content() {
	    let localctx = new ContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, TangleParser.RULE_content);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 244;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,22,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 242;
	                this._errHandler.sync(this);
	                switch(this._input.LA(1)) {
	                case 27:
	                    this.state = 239;
	                    this.elementsDeclaration();
	                    break;
	                case 12:
	                    this.state = 240;
	                    this.embeddedStatement();
	                    break;
	                case 60:
	                    this.state = 241;
	                    this.textContent();
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                } 
	            }
	            this.state = 246;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,22,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elementAttribute() {
	    let localctx = new ElementAttributeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, TangleParser.RULE_elementAttribute);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 247;
	        this.match(TangleParser.NAME);
	        this.state = 248;
	        this.match(TangleParser.ASSIGN);
	        this.state = 251;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 12:
	            this.state = 249;
	            this.embeddedStatement();
	            break;
	        case 17:
	            this.state = 250;
	            this.stringType();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	embeddedStatement() {
	    let localctx = new EmbeddedStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, TangleParser.RULE_embeddedStatement);
	    try {
	        this.state = 258;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,24,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 253;
	            this.embeddedIf();
	            break;
